fixing not box mod click on ios; removing plasma from springs

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,4 +1,5 @@
 @font-face {
-    font-family: DidactGothic;
-    src: url(../font/DidactGothic.ttf);
+    /*font-family: DidactGothic;*/
+    /*src: url(../font/DidactGothic.ttf);*/
+    font-family: sans-serif;
 }
